feat: adding spotless check in build